# auth_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini.example  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: main.py  run.py
app/core/: config.py  constants.py  exceptions.py  logger.py  oauth.py  permissions.py  swagger.py  tracer.py
app/core/crud/: base.py  utils.py
app/core/exceptions/: default_messages.py  exceptions.py
app/internal/: cache.py  captcha.py  roles.py  users.py
app/internal/crud/: base.py  utils.py
app/internal/oauth/: clients.py  exceptions.py
app/models/: __init__.py  core.py  roles.py  users.py
app/routes/: auth.py  core.py  example.py  roles.py  users.py
app/routes/v1/: auth.py  captcha.py  oauth.py  roles.py  users.py
app/schemas/: auth.py  captcha.py  core.py  login_history.py  oauth.py  roles.py  users.py
app/services/: blocked_jwt.py  cache.py  jwt_generator.py
app/utils/: auth.py  db.py  partitions.py  rate_limit.py  required.py  trace.py
migrations/: env.py
migrations/versions/: 2022_10_21_2154_72b53600c061_init.py  2022_10_21_2158_253065507371_base_models.py  2022_10_22_1502_767c1a72f4e7_base_models.py  2022_10_25_2216_f1e3c9f1923c_add_base_roles.py  2022_11_06_1251_67d9dc5b552a_social_accounts.py  2022_11_07_2017_a6a5db82ca53_update_user.py  2022_11_08_1834_5ea42feb5940_additional_auth_flag.py  2022_11_09_1237_09a420ae9a33_.py
migrations/versions/data_versions/: core.py  data_2022_10_25_2216_f1e3c9f1923c_add_base_roles.py
nginx/: site.conf
tests/endpoints/: .env.example  Dockerfile  conftest.py  docker-compose.yml  requirements.txt
tests/endpoints/core/: constants.py  settings.py
tests/endpoints/src/auth/: requests.py  test_auth.py
tests/endpoints/utils/: redis.py  requests.py
