[tool.poetry]
name = "auth service"
version = "0.1.0"
description = "User Authentication Service within the Cinema Information System"
authors = ["Dan <babindj@uriit.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pydantic = "^1.10.2"
gevent = "^22.10.1"
sqlalchemy = "^1.4.42"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
flasgger = "^0.9.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
