[tool.poetry]
name = "auth service"
version = "0.1.0"
description = "User Authentication Service within the Cinema Information System"
authors = ["Dan <babindj@uriit.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
gevent = "^22.10.1"
sqlalchemy = "^1.4.42"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
flasgger = "^0.9.5"
flask-pydantic = "^0.11.0"
redis = "^4.3.4"
flask-jwt-extended = "^4.4.4"
flask-security = "^3.0.0"
flask-pydantic-spec = "^0.3.1"
flask = "2.1.2"
werkzeug = "2.1.2"
psycopg2 = "^2.9.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
